-Gave the left nav a fixed width rather than a % of overall screen -Added a new ultra-cool CSS3 property to notifications called "word-wrap" that breaks up really long words. -For non CSS3 browsers, added an overflow option as well.

--- a/trunk/web/OSBLE/Content/Site.css
+++ b/trunk/web/OSBLE/Content/Site.css
@@ -407,7 +407,7 @@ body#layoutLogOn
 
 #dashboard_left
 {
-	width: 24%;
+	width: 290px;
 	float: left;
 	padding-right: 1%;
 }
@@ -1125,6 +1125,13 @@ ul.selector
 #past_events
 {
 	display: none;
+}
+
+.event
+{
+    word-wrap: break-word;
+    width: 267px;
+    overflow: auto;
 }
 
 .event_description
